--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <img id="victory" src="./res/img/victory.jpg" alt="" srcset="">
 <img id="defeat" src="./res/img/defeat.jpg" alt="" srcset="">
 <button id="restart" onclick="Restart()">RESTART</button>
-<p id="credit">Za grafiku děkuji Tadeáši Mejzlíkovi</p>
+<p id="credit">Za grafiku Rakeťáků děkuji Tadeáši Mejzlíkovi</p>
     <script src="./res/js/main.js"></script>
 </body>
 </html>
